# advent-of-code

2024/python/: pyproject.toml
2024/python/day01/: pyproject.toml
2024/python/day01/tests/: test_part1.py  test_part2.py
2024/rust/: Cargo.toml  day05.bench.txt  day06.bench.txt  day09.bench.txt  justfile
2024/rust/daily-template/: Cargo.toml
2024/rust/daily-template/benches/: benchmarks.rs
2024/rust/daily-template/src/: part1.rs  part2.rs
2024/rust/day01/: Cargo.toml
2024/rust/day01/src/: main.rs
2024/rust/day02/: Cargo.toml
2024/rust/day02/src/: main.rs
2024/rust/day03/: Cargo.toml
2024/rust/day03/src/: main.rs
2024/rust/day04/: Cargo.toml
2024/rust/day04/src/: main.rs
2024/rust/day05/: Cargo.toml
2024/rust/day05/benches/: benchmarks.rs
2024/rust/day05/src/: part1.rs  part2.rs
2024/rust/day06/: Cargo.toml
2024/rust/day06/benches/: benchmarks.rs
2024/rust/day06/src/: part1.rs  part2.rs
2024/rust/day07/: Cargo.toml
2024/rust/day07/benches/: benchmarks.rs
2024/rust/day07/src/: part1.rs  part2.rs
2024/rust/day08/: Cargo.toml
2024/rust/day08/benches/: benchmarks.rs
2024/rust/day08/src/: parse_testing.rs  part1.rs  part2.rs
2024/rust/day09/: Cargo.toml
2024/rust/day09/benches/: benchmarks.rs
2024/rust/day09/src/: part1.rs  part2.rs
2024/rust/day10/: Cargo.toml
2024/rust/day10/benches/: benchmarks.rs
2024/rust/day10/src/: part1.rs  part2.rs
2024/rust/day11/: Cargo.toml
2024/rust/day11/benches/: benchmarks.rs
2024/rust/day11/src/: part1.rs  part2.rs
2024/rust/day12/: Cargo.toml
2024/rust/day12/benches/: benchmarks.rs
2024/rust/day12/src/: part1.rs  part2.rs
2024/rust/day13/: Cargo.toml
2024/rust/day13/benches/: benchmarks.rs
2024/rust/day13/src/: part1.rs  part2.rs
2024/rust/day14/: Cargo.toml
2024/rust/day14/benches/: benchmarks.rs
2024/rust/day14/src/: part1.rs  part2.rs
2024/rust/day15/: Cargo.toml
2024/rust/day15/benches/: benchmarks.rs
2024/rust/day15/src/: part1.rs  part2.rs
2024/rust/day16/: Cargo.toml
2024/rust/day16/benches/: benchmarks.rs
2024/rust/day16/src/: lib.rs  part1.rs  part1_path.rs  part2.rs
2024/rust/day17/: Cargo.toml
2024/rust/day17/benches/: benchmarks.rs
2024/rust/day17/src/: part1.rs  part2.rs
2024/rust/day18/: Cargo.toml
2024/rust/day18/benches/: benchmarks.rs
2024/rust/day18/src/: part1.rs  part2.rs
2024/rust/day19/: Cargo.toml
2024/rust/day19/benches/: benchmarks.rs
2024/rust/day19/src/: part1.rs  part2.rs
2024/rust/day20/: Cargo.toml
2024/rust/day20/benches/: benchmarks.rs
2024/rust/day20/src/: part1.rs  part2.rs
2024/rust/day21/: Cargo.toml
2024/rust/day21/benches/: benchmarks.rs
2024/rust/day21/src/: part1.rs  part2.rs
2024/rust/day22/: Cargo.toml
2024/rust/day22/benches/: benchmarks.rs
2024/rust/day22/src/: part1.rs  part2.rs
2024/rust/day23/: Cargo.toml
2024/rust/day23/benches/: benchmarks.rs
2024/rust/day23/src/: part1.rs  part2.rs
2024/rust/day24/: Cargo.toml
2024/rust/day24/benches/: benchmarks.rs
2024/rust/day24/src/: part1.rs  part2.rs
2024/rust/day25/: Cargo.toml
(+7 files in other folders)
