[package]
name = "day10"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools.workspace = true
miette.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
glam.workspace = true

[dev-dependencies]
divan.workspace = true
rstest.workspace = true
test-log.workspace = true

[[bench]]
name = "day10-bench"
path = "benches/benchmarks.rs"
harness = false
