[package]
name = "day19"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools.workspace = true
miette.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
winnow.workspace = true

[dev-dependencies]
divan.workspace = true
rstest.workspace = true
test-log.workspace = true

[[bench]]
name = "day19-bench"
path = "benches/benchmarks.rs"
harness = false
